--- a/style.css
+++ b/style.css
@@ -43,6 +43,15 @@ aside {
     font-style: italic;
  
   }
+  #ilgi{
+  margin:0; 
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: 'montserrat' sans-serif;
+  color:#fff;
+  background-image: url("havadurumu2jpg.jpg");
+
+  }
  
   section {
 
@@ -57,4 +66,58 @@ font-style: italic;
 }
 #sehrim{
     background-color:#333;padding:18px;color:#fff; background-image: url("arkaplanss.jpg") ;color:black
+}
+.app{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background:rgba(0,0,0,.7);
+    height: 100vh;
+}
+.header
+{
+    padding: 50px 20px 30px 20px;
+}
+.header h1{
+    font-size: 50px;
+    color:coral;
+    text-shadow: 1px 3px rgba(0,0,0,.9) ;
+}
+.header input{
+    width: 100%;
+    padding: 10px;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    border-bottom: 2px ;
+    text-align: center;
+    color:#f2f2f2;
+}
+.city
+{
+    font-size: 35px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    text-shadow: 1px 3px rgba( 0,0,0,.8);
+}
+.temp
+{
+    font-size:100px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    text-shadow: 1px 5px rgba( 0,0,0,1);
+}
+
+.desc{
+   font-size:25px;
+   font-style: italic;
+   text-shadow: 1px 3px rgba( 0,0,0,.8);
+   margin-bottom:10px; 
+}
+.minmax
+{
+    font-size: 24px;
+    text-shadow: 1px 3px rgba(0,0,0,.8);
+
 }
